Avalara Fullqa/src/CloudCraze/objects/E_InvoiceItem__c.object
<CustomObject>
    <description>Represents invoice detail and reference to other objects.  The invoice item should be a running record of the invoice.  The initial set of data will be the initial detail of the invoice.</description>
    <fields>
        <fullName>CCOrderItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specific order item to which this invoice applies (optional)</description>
        <label>CC Order Item</label>
        <referenceTo>E_OrderItem__c</referenceTo>
        <relationshipLabel>CC Invoice Items</relationshipLabel>
        <relationshipName>CCInvoiceItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Order to which this invoice item applies (optional)</description>
        <label>CC Order</label>
        <referenceTo>E_Order__c</referenceTo>
        <relationshipLabel>CC Invoice Items</relationshipLabel>
        <relationshipName>CCInvoiceItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments about this line item.</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InvoiceItemId__c</fullName>
        <description>External identifier.</description>
        <externalId>true</externalId>
        <label>Invoice Item Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <description>The invoice this item is a child of</description>
        <label>Invoice</label>
        <referenceTo>E_Invoice__c</referenceTo>
        <relationshipLabel>CC Invoice Items</relationshipLabel>
        <relationshipName>InvoiceItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OriginalAmount__c</fullName>
        <description>The original amount of the invoice item. Once set this should not be changed. Could be negative or positive.</description>
        <label>Original Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>Display order sequence for the item.</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>E.g. Open, Closed.</description>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>E.g. Detail, Comment, Payment.</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CC Invoice Item</label>
    <nameField>
        <displayFormat>II-{0000000000}</displayFormat>
        <label>CC Invoice Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Invoice Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>